# hilfe-auto

src/: CMakeLists.txt  config.h.in  main.cpp
src/Auto/: BaseCar.cpp  BaseCar.h  Car1.cpp  Car1.h  Car2.cpp  Car2.h
src/Auto/components/: BaseBreak.cpp  BaseBreak.h  BaseEngine.cpp  BaseEngine.h  BaseFrame.cpp  BaseFrame.h  BaseGears.cpp  BaseGears.h  BaseSuspension.cpp  BaseSuspension.h  BaseWheels.cpp  BaseWheels.h
src/Eine_Level_Klasse/: Eine_Level_Klasse.cpp  Eine_Level_Klasse.h  Level.cpp  Level.h
src/Raylib_Sprite_Klasse/: Sprite.cpp  Sprite.h
src/Sprite/: Frame.cpp  Frame.h  Sprite.cpp  Sprite.h
src/Würfelspiel/: PlayRound.cpp  PlayRound.h  UI.cpp  UI.h  Würfelspiel.cpp  Würfelspiel.h
src/Würfelspiel/Dices/: BaseDice.cpp  BaseDice.h  D10.cpp  D10.h  D10p.cpp  D10p.h  D12.cpp  D12.h  D20.cpp  D20.h  D6.cpp  D6.h  D8.cpp  D8.h
